@@ -42,7 +42,7 @@
 			label="CONTENT_TEXT_LABEL"
 			description="CONTENT_TEXT_DESC"
 			class="inputbox"
-			filter="ContentHelper::filterText"
+			filter="JComponentHelper::filterText"
 			asset_id="com_content"
 		/>
 
@@ -193,7 +193,7 @@
 				type="text"
 				label="COM_CONTENT_FIELD_IMAGE_CAPTION_LABEL"
 				description="COM_CONTENT_FIELD_IMAGE_CAPTION_DESC"
-				class="inputbox" 
+				class="inputbox"
 				size="20" />
 			<field
 				name="float_intro"
@@ -202,7 +202,7 @@
 				description="COM_CONTENT_FLOAT_DESC">
 					<option value="">JGLOBAL_USE_GLOBAL</option>
 					<option value="right">COM_CONTENT_RIGHT</option>
-					<option value="left">COM_CONTENT_LEFT</option>	
+					<option value="left">COM_CONTENT_LEFT</option>
 			</field>
 			</fieldset>
 			<fieldset name="image-full">
@@ -221,8 +221,8 @@
 				type="text"
 				label="COM_CONTENT_FIELD_IMAGE_CAPTION_LABEL"
 				description="COM_CONTENT_FIELD_IMAGE_CAPTION_DESC"
-				class="inputbox" 
-				size="20" />	
+				class="inputbox"
+				size="20" />
 			<field
 				name="float_fulltext"
 				type="list"
@@ -245,7 +245,7 @@
 				type="text"
 				label="COM_CONTENT_FIELD_URLA_LINK_TEXT_LABEL"
 				description="COM_CONTENT_FIELD_URL_LINK_TEXT_DESC"
-				class="inputbox" 
+				class="inputbox"
 				size="20" />
 			<field
 				name="targeta"
@@ -262,7 +262,7 @@
 				type="text"
 				label="COM_CONTENT_FIELD_URLB_LINK_TEXT_LABEL"
 				description="COM_CONTENT_FIELD_URL_LINK_TEXT_DESC"
-				class="inputbox" 
+				class="inputbox"
 				size="20" />
 			<field
 				name="targetb"
@@ -274,17 +274,17 @@
 				validate="url"
 				label="COM_CONTENT_FIELD_URLC_LABEL"
 				description="COM_CONTENT_FIELD_URL_DESC" />
-			<field 
+			<field
 				name="urlctext"
 				type="text"
 				label="COM_CONTENT_FIELD_URLC_LINK_TEXT_LABEL"
 				description="COM_CONTENT_FIELD_URL_LINK_TEXT_DESC"
-				class="inputbox" 
+				class="inputbox"
 				size="20" />
 			<field
 				name="targetc"
 				type="hidden"
 				 />
-		</fields>	
+		</fields>
 
 </form>
